# EPIC_poongsan

./: .gitignore  ARM64_OPTIMIZATION_GUIDE.md  DUAL_CORE_OPTIMIZATION_README.md  README_Distributed_System.md  README_FINAL_DEPLOYMENT.md  README_JETSON_ORIN_D455.md  SCRIPT_COMPARISON.md  all_params_bak.yaml  odometry_repeater_synced.py  run_dual_core_optimized.sh  run_dual_core_optimized_arm64.sh  run_dual_core_optimized_arm64_silent.sh  run_host_pc.sh  run_target_board copy.sh  run_target_board.sh  run_target_board_v2.sh  run_target_board_v3-1.sh  run_target_board_v3.sh  target_board_garage_dual_core.yaml  target_board_garage_v2.yaml  toolchain.cmake
.github/workflows/: build.yml
EPIC_poongsan-main/: deploy_to_target_board.sh  setup_epic_arm.sh
EPIC_poongsan-main/src/: launch_trajectory_sampler.launch
EPIC_poongsan-main/src/EPIC/: README.md
EPIC_poongsan-main/src/EPIC/src/global_planner/exploration_manager/: README_MultiDOF_Controller.md
EPIC_poongsan-main/src/EPIC/src/global_planner/exploration_manager/include/epic_planner/: fast_exploration_manager.h
EPIC_poongsan-main/src/EPIC/src/global_planner/exploration_manager/launch/: launch_trajectory_sampler.launch  multidof_trajectory_control.launch
EPIC_poongsan-main/src/EPIC/src/global_planner/exploration_manager/src/: custom_trajectory_sampler.cpp  fast_exploration_manager.cpp  fsm_utils.cpp
EPIC_poongsan-main/src/EPIC/src/global_planner/frontier_manager/: CMakeLists.txt
EPIC_poongsan-main/src/EPIC/src/global_planner/frontier_manager/include/frontier_manager/: frontier_manager.h
EPIC_poongsan-main/src/EPIC/src/global_planner/frontier_manager/src/: global_planning.cpp
EPIC_poongsan-main/src/EPIC/src/global_planner/pointcloud_topo/include/pointcloud_topo/: graph.h
EPIC_poongsan-main/src/EPIC/src/global_planner/pointcloud_topo/src/: topo_skeleton_graph.cpp
EPIC_poongsan-main/src/EPIC/src/global_planner/utils/lkh_tsp_solver/include/: LKH.h
EPIC_poongsan-main/src/EPIC/src/global_planner/utils/lkh_tsp_solver/resource/: single.par
EPIC_poongsan-main/src/EPIC/src/global_planner/utils/lkh_tsp_solver/src/: lkh_globals.c
EPIC_poongsan-main/src/EPIC/src/local_planner/Utils/poly_traj/: CMakeLists.txt  package.xml
EPIC_poongsan-main/src/EPIC/src/local_planner/minco_planner/include/misc/: visualizer.hpp
EPIC_poongsan-main/src/EPIC/src/local_planner/minco_planner/src/: traj_server.cpp
EPIC_poongsan-main/src/EPIC/src/local_planner/path_searching/: CMakeLists.txt
EPIC_poongsan-main/src/EPIC/src/local_planner/path_searching/include/path_searching/: bubble_astar.h
EPIC_poongsan-main/src/EPIC/src/local_planner/path_searching/include/visulizer/: bubble_viszer.hpp
EPIC_poongsan-main/src/EPIC/src/local_planner/path_searching/src/: bubble_astar.cpp
src/: custom_trajectory_sampler.cpp
src/EPIC/src/global_planner/exploration_manager/: CMakeLists.txt  package.xml
src/EPIC/src/global_planner/exploration_manager/config/: d455.yaml  garage.yaml  target_board_garage copy.yaml  target_board_garage.yaml  target_board_garage_gg1.yaml  target_board_garage_v2-1.yaml  target_board_garage_v2.yaml
src/EPIC/src/global_planner/exploration_manager/include/epic_planner/: expl_data.h  fast_exploration_fsm.h  fast_exploration_manager.h
src/EPIC/src/global_planner/exploration_manager/launch/: algorithm.xml  d455.launch  garage.launch  simulation_d455.launch
src/EPIC/src/global_planner/exploration_manager/scripts/: measure_planning_metrics.py  plot_planning_time.py
src/EPIC/src/global_planner/exploration_manager/src/: custom_trajectory_sampler.cpp  fast_exploration_fsm.cpp  fast_exploration_manager.cpp  fsm_utils.cpp
src/EPIC/src/global_planner/frontier_manager/: CMakeLists.txt  package.xml
src/EPIC/src/global_planner/frontier_manager/src/: frontier_manager.cpp  frontier_viszer.cpp  global_planning.cpp
src/EPIC/src/global_planner/lidar_map/: CMakeLists.txt
src/EPIC/src/global_planner/lidar_map/include/lidar_map/: lidar_map.h
src/EPIC/src/global_planner/lidar_map/src/: lidar_map_interface.cpp  sim_lio.cpp
src/EPIC/src/global_planner/pointcloud_topo/: CMakeLists.txt
src/EPIC/src/global_planner/pointcloud_topo/include/pointcloud_topo/: graph_visualizer.hpp
src/EPIC/src/global_planner/utils/lkh_tsp_solver/: CMakeLists.txt  package.xml
src/EPIC/src/global_planner/utils/lkh_tsp_solver/resource/: single.par  single.tsp  single.txt
src/EPIC/src/local_planner/Utils/poly_traj/: CMakeLists.txt
src/EPIC/src/local_planner/Utils/poly_traj/src/: traj_generator.cpp
src/EPIC/src/local_planner/Utils/traj_utils/: CMakeLists.txt
src/EPIC/src/local_planner/Utils/traj_utils/src/: planning_visualization.cpp  process_msg.cpp
src/EPIC/src/local_planner/minco_planner/: CMakeLists.txt  package.xml
src/EPIC/src/local_planner/minco_planner/config/: traj.rviz
src/EPIC/src/local_planner/minco_planner/include/gcopter/: firi.hpp  gcopter.hpp  sfc_gen.hpp
src/EPIC/src/local_planner/minco_planner/include/plan_manage/: planner_manager.h
src/EPIC/src/local_planner/minco_planner/src/: planner_manager.cpp
src/EPIC/src/local_planner/path_searching/: CMakeLists.txt  package.xml
